코드 리팩토링
 - guava 사용 코드를 java8 스타일로 변경
 - java 1.6 -> 1.8
 - jsoup 1.7.2 -> 1.8.1
 - guava 제거