@@ -1,6 +1,7 @@
 package com.serivires.orthrus.parse;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.jsoup.Jsoup;
@@ -8,9 +9,6 @@ import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.serivires.orthrus.model.Webtoon;
 
 public class WebtoonParser {
@@ -18,8 +16,9 @@ public class WebtoonParser {
 	/**
 	 * 해당 페이지에 있는 현재 페이지 숫자 정보를 반환합니다.
 	 * 
-	 * http://comic.naver.com/webtoon/detail.nhn?titleId=316912&no=188
-	 * <meta property="og:url" content="http://comic.naver.com/webtoon/detail.nhn?titleId=316912&amp;no=188">
+	 * http://comic.naver.com/webtoon/detail.nhn?titleId=316912&no=188 <meta
+	 * property="og:url" content=
+	 * "http://comic.naver.com/webtoon/detail.nhn?titleId=316912&amp;no=188">
 	 * 
 	 * @param htmlString
 	 * @return
@@ -29,11 +28,11 @@ public class WebtoonParser {
 		Document doc = Jsoup.parse(htmlString);
 		Element urlElement = doc.select("head meta[property=og:url]").first();
 		String url = urlElement.attr("abs:content");
-		
+
 		String pageNumber = url.substring(url.indexOf("no=")).replace("no=", "");
 		return Integer.parseInt(pageNumber);
 	}
-	
+
 	/**
 	 * 
 	 * @param url
@@ -43,7 +42,7 @@ public class WebtoonParser {
 		int startIndex = url.indexOf("titleId=");
 		return url.substring(startIndex).replace("titleId=", "");
 	}
-	
+
 	/**
 	 * 웹툰 이름으로 검색된 결과의 첫번째 항목에 대한 정보를 반환합니다.
 	 * 
@@ -57,17 +56,16 @@ public class WebtoonParser {
 		if (elements.isEmpty() == true) {
 			return Webtoon.emptyObject;
 		}
-		
+
 		Element element = elements.select("h5 a").first();
 		String urlPath = element.attr("href");
-		
+
 		Webtoon webToon = new Webtoon();
 		webToon.setId(getIDByUrl(urlPath));
 		webToon.setTitle(element.html());
 
 		return webToon;
 	}
-
 
 	/**
 	 * 한 페이지 내에 있는 유효한 이미지 파일 주소 목록을 반환합니다.
@@ -77,20 +75,11 @@ public class WebtoonParser {
 	 */
 	public List<String> selectImgByHtmlPage(String HtmlString) {
 		Document doc = Jsoup.parse(HtmlString);
-		Elements elements = doc.select(".wt_viewer img");
+		List<Element> elements = (List<Element>) doc.select(".wt_viewer img");
 
-		return FluentIterable.from(elements).transform(new Function<Element, String>() {
-			public String apply(Element element) {
-				return element.attr("abs:src");
-			}
-		}).filter(new Predicate<String>() {
-			public boolean apply(String src) {
-				return StringUtils.isNotBlank(src);
-			}
-		}).filter(new Predicate<String>() { // 광고 이미지
-			public boolean apply(String src) {
-				return (StringUtils.contains(src, "txt_ads.png") == false);
-			}
-		}).toList();
+		return elements.stream().map(element -> element.attr("abs:src"))//
+				.filter(src -> StringUtils.isNotBlank(src))//
+				.filter(src -> !StringUtils.contains(src, "txt_ads.png"))//
+				.collect(Collectors.toList());
 	}
 }
